k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: axonote
  labels:
    name: axonote
    app.kubernetes.io/name: axonote
    app.kubernetes.io/component: namespace
